[project]
name = "backend"
version = "0.1.0"
description = "Server Side API (nextsalah.com)"
authors = [
    { name = "ismail424", email = "cicas03@hotmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "httptools>=0.4.0",
    "uvicorn>=0.17.6",
    "fastapi>=0.75.1",
    "Jinja2>=3.1.1",
    "aiofiles>=0.8.0",
    "bs4>=0.0.1",
    "requests>=2.27.1"
]

[tool.poetry]
# You can keep this section if you still use poetry locally
name = "backend"
version = "0.1.0"
description = "Server Side API (nextsalah.com)"
authors = ["ismail424 <cicas03@hotmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
