[project]
name = "backend"
version = "0.1.0"
description = "Server Side API (nextsalah.com)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httptools>=0.4.0",
    "uvicorn>=0.17.6",
    "fastapi>=0.75.1",
    "Jinja2>=3.1.1",
    "aiofiles>=0.8.0",
    "bs4>=0.0.1",
    "requests>=2.27.1",
]
[tool.poetry]
# Keep this if you still use Poetry locally
name = "backend"
version = "0.1.0"
description = "Server Side API (nextsalah.com)"
authors = ["ismail424 <cicas03@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
httptools = "^0.4.0"
uvicorn = "^0.17.6"
fastapi = "^0.75.1"
Jinja2 = "^3.1.1"
aiofiles = "^0.8.0"
bs4 = "^0.0.1"
requests = "^2.27.1"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[tool.uv]
# This prevents the "Failed to build backend" error by 
# telling uv NOT to try and install your 'app' folder as a library.
package = false
